# pyiceberg-benchmark

./: README.md  app.py  pyproject.toml
.devcontainer/: devcontainer.json
benchmark/: stack.py
benchmark/functions/profiling/: pyproject.toml
nbs/: 0.nyctaxi.raw.ipynb  0_nyc_taxi.raw.ipynb  1.nyctaxi.iceberg.ipynb  1_nyc_taxi.iceberg.ipynb  2.nyctaxi.pyice.ipynb  nyc_taxi.ipynb
scripts/: install.sh  pyiceberg.py
